--- a/src/index.html
+++ b/src/index.html
@@ -10,29 +10,24 @@
 </head>
 
 <body>
-  <header class="clearfix">
-    <h1>Example</h1>
-    <p>
-      <span id="std_name"></span><br>
-      CS4280 - Fall 2022
-    </p>
-  </header>
+<header class="clearfix">
+  <h1>Example -- Coleton Watt</h1>
+  <p>
+    <span id="std_name"></span><br>
+    CS4280 - Fall 2022
+  </p>
+</header>
 
-  <main>
-    <article>
-      <canvas id="webgl-scene">
-        Your browser does not support HTML5.
-      </canvas>
-    </article>
-    <aside></aside>
-  </main>
+<main>
+</main>
 
-  <footer>
-    <span>Powered by&nbsp;&nbsp;</span>
-    <img src="images/webgl.png" alt="WEBGL logo" height="20">
-  </footer>
+<footer>
+  <span>Powered by&nbsp;&nbsp;</span>
+  <img src="images/webgl.png" alt="WEBGL logo" height="20">
+</footer>
 
-  <script src="javascripts/main.js"></script>
+<script src="javascripts/main.js"></script>
+
 </body>
- 
+
 </html>
